fix: align dropdown menu to right on mobile view

--- a/src/heads.css
+++ b/src/heads.css
@@ -50,8 +50,8 @@
 
     position: absolute;
     top: -500px; 
-    left: 550px;
-    
+    right: 10px;
+    left: auto;
     height: 45vh;
     text-align: center;
     z-index: 10;
